# Lumos

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  DISPATCH.md  FINAL_FINAL_MULTIAGENT.md  PARALLEL_OPS.md  README.md  ai.md  codex_agents_logs.md  coding_guidelines.md  groupchat.md  log.md  lumos-ai-plan-lean.md  lumos-ai-plan.md  lumos.cmd
.claude/agents/: builder.md  pr-reviewer.md  team-lead.md
.github/: pull_request_template.md
.github/workflows/: core-quality-gate.yml
cmake/: LumosWarnings.cmake
installer/windows/: build_native.ps1  build_platform_native.ps1  build_shell_native.ps1  lumos_launcher.ps1
src/: main.cpp
src/app/: EnhancementController.cpp  EnhancementController.h
src/common/: Telemetry.cpp  Telemetry.h
src/contracts/: EnhancementTypes.h  IEnhancementPipeline.h
src/engine/: CpuStubPipeline.cpp  CpuStubPipeline.h
src/ui/: EnhanceViewModel.cpp  EnhanceViewModel.h
src/ui/qml/: EnhanceView.qml  MainWindow.qml
tests/: TestHelpers.h
tests/integration/: EnhanceFlowTests.cpp
tests/unit/: PipelineContractTests.cpp  TelemetryTests.cpp
